--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,8 @@
 {
     "name": "pascalebeier/config",
     "type": "library",
-    "description": "Application Configuration",
+    "description": "Simple Application Configuration",
     "keywords": [
-        "PascaleBeier",
         "Config",
         "Configuration"
     ],
@@ -18,11 +17,11 @@
         }
     ],
     "require": {
-        "php" : "~5.6|~7.0|~7.1"
+        "php" : ">=7.0.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "~5.0|~6.0",
-        "squizlabs/php_codesniffer": "~2.0|3.0"
+        "phpunit/phpunit": "~6.0",
+        "squizlabs/php_codesniffer": "*"
     },
     "autoload": {
         "psr-4": {
@@ -38,14 +37,5 @@
         "test": "phpunit",
         "check-style": "phpcs -p --standard=PSR2 --runtime-set ignore_errors_on_exit 1 --runtime-set ignore_warnings_on_exit 1 src tests",
         "fix-style": "phpcbf -p --standard=PSR2 --runtime-set ignore_errors_on_exit 1 --runtime-set ignore_warnings_on_exit 1 src tests"
-    },
-    "extra": {
-        "branch-alias": {
-            "dev-master": "1.0-dev"
-        }
-    },
-    "config": {
-        "sort-packages": true,
-        "optimize-autoloader": true
     }
 }
